<resources>
    <string name="app_name">ParagonLite</string>
    <string name="checkout">Checkout</string>
    <string name="articles">Articles</string>
    <string name="connect">Connect</string>
    <string name="add_article">Add Article</string>
    <string name="no_articles_create_new">No articles,\nCreate a new one</string>
    <string name="name_of_article">Name of the article</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pair_new_printer">Pair new Printer</string>
    <string name="bluetooth_will_turn_on_to_pair">Bluetooth will turn on to pair</string>
    <string name="no_bluetooth">Bluetooth isn\'t supported on this device</string>
    <string name="location_permission_needed">Bluetooth won\'t work unless location permission is granted!</string>
    <string name="permission_granted">Permission successfully granted</string>
    <string name="permission_denied">The core of this application won\'t work without this permission, please consider
        granting this permission
    </string>
    <string name="printer_name">Printer name:</string>
    <string name="mac_address">MAC Address</string>
    <string name="mac_address_saved">MAC Address Saved</string>
    <string name="printer_save_error">An error occurred while saving the printer!</string>
    <string name="print">Print</string>
    <string name="print_checkout">Print receipt?</string>
    <string name="printing">PRINTING</string>
    <string name="article_name">Article Name</string>
    <string name="start_search">Start Search</string>
    <string name="no_saved_bluetooth_address_warning">No saved bluetooth address found, please pair with a bluetooth printer</string>
    <string name="add_bluetooth_devices">Add bluetooth device</string>

    <string-array name="quantity_array">
        <item>Liter(l)</item>
        <item>200g</item>
        <item>100g</item>
        <item>Piece</item>
        <item>0.75l</item>
        <item>1dcl</item>
        <item>2dcl</item>
    </string-array>

    <string name="hello_blank_fragment">BLANK FRAGMENT</string>

    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="last_updated">Last Updated</string>
    <string name="calendar">Calendar</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="no_receipts">No receipts, select a date</string>
    <string name="article_saved_successfully">Article saved successfully</string>
    <string name="article_save_error">An error occurred while saving the article!</string>
    <string name="error_occurred">Unknown error occurred, please try again later!</string>
    <string name="article_successfully_created">Article successfully created</string>
    <string name="article_successfully_deleted">Article successfully deleted!</string>
    <string name="total_amount">Total: %1$s</string>
    <string name="ok">OK</string>
    <string name="bluetooth_canceled">Bluetooth activation canceled, you can enable it by clicking the button below</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="no_receipts_in_range">No receipts in that range, select another date range</string>
    <string name="article_failed_to_delete">We couldn\'t delete that article, please try later!</string>

</resources>
