<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/historyRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.history.HistoryFragment">

            <View
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@color/colorHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReceiptNumber"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/number"
                    android:textColor="#FFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/background"
                    app:layout_constraintStart_toStartOf="@+id/background" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReceiptDate"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/date"
                    android:textColor="#FFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/background"
                    app:layout_constraintEnd_toStartOf="@+id/tvReceiptPrice"
                    app:layout_constraintStart_toEndOf="@+id/tvReceiptNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReceiptPrice"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/amount"
                    android:textColor="#FFFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/background"
                    app:layout_constraintEnd_toEndOf="@+id/background" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvReceiptList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background"
                    app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fabPrint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="4dp"
                    android:text="@string/print"
                    android:textColor="#ffffff"
                    android:visibility="gone"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/ic_print_24dp"
                    app:iconTint="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="@android:color/transparent" />

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/noReceiptGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="appLogo,tvEmptyReceipts" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmptyReceipts"
                    style="@style/EmptyScreenText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    android:text="@string/no_receipts"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appLogo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>