<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bluetoothRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.bluetooth.BluetoothFragment">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivAddNewPrinter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/light_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_white_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPairNewPrinter"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pair_new_printer"
                    app:layout_constraintStart_toEndOf="@+id/ivAddNewPrinter"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBluetoothTurnOn"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/bluetooth_will_turn_on_to_pair"
                    app:layout_constraintStart_toStartOf="@+id/tvPairNewPrinter"
                    app:layout_constraintTop_toBottomOf="@+id/tvPairNewPrinter" />

            <View
                    android:id="@+id/printSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAvailableBluetoothDevices"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/printSeparator" />

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swBluetoothEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="false"
                    app:layout_constraintBottom_toTopOf="@+id/tvBluetoothStatus"
                    app:layout_constraintEnd_toEndOf="@+id/tvBluetoothStatus"
                    app:layout_constraintStart_toStartOf="@+id/tvBluetoothStatus"
                    app:layout_constraintTop_toTopOf="@+id/ivAddNewPrinter" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBluetoothStatus"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/bluetooth_status"
                    app:layout_constraintBottom_toBottomOf="@+id/tvBluetoothTurnOn"
                    app:layout_constraintEnd_toEndOf="parent" />

            <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbBluetooth"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:elevation="4dp"
                    android:indeterminateOnly="true"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBluetoothTurnOn" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fabActivateBluetoothSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/start_search"
                    android:textColor="#ffffff"
                    app:backgroundTint="@color/colorAccent"
                    app:icon="@drawable/ic_bluetooth_24dp"
                    app:iconTint="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="@android:color/transparent" />

            <androidx.constraintlayout.widget.Group
                    android:id="@+id/noBluetoothGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="appLogo,tvEmptyBluetoothDevices" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmptyBluetoothDevices"
                    style="@style/EmptyScreenText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:text="@string/add_bluetooth_devices"
                    android:textAlignment="center"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appLogo" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEnableBluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_bluetooth"
                    app:cornerRadius="8dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/rvAvailableBluetoothDevices"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmptyBluetoothDevices" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>