<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="articleCreationFragment"
                type="com.example.presentation.ui.articles.creation.ArticleCreationFragment"/>
        <variable
                name="articleCreationViewModel"
                type="com.example.presentation.ui.articles.creation.ArticleCreationViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/articleCreationRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.articles.creation.ArticleCreationFragment">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ttArticleName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etArticleName"
                        android:layout_width="match_parent"
                        android:hint="@string/name_of_article"
                        android:onTextChanged="@{articleCreationViewModel::onArticleNameChanged}"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                    android:id="@+id/spinnerSeparator"
                    android:layout_width="0dp"
                    android:background="@color/light_gray"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerQuantity"
                    app:layout_constraintEnd_toEndOf="@+id/spinnerQuantity"
                    app:layout_constraintStart_toStartOf="@+id/spinnerQuantity"/>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/quantity_array"
                    android:textAlignment="textStart"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/ttArticleName"
                    app:layout_constraintTop_toBottomOf="@+id/ttArticleName"
                    app:layout_constraintStart_toStartOf="@+id/ttArticleName"
                    android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ttArticlePrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintEnd_toEndOf="@+id/spinnerQuantity"
                    app:layout_constraintStart_toStartOf="@+id/spinnerQuantity"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerSeparator" android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etArticlePrice"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:hint="@string/price"
                        android:onTextChanged="@{articleCreationViewModel::onPriceChanged}"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{view -> articleCreationFragment.onCancelClick()}"
                    app:layout_constraintEnd_toStartOf="@+id/btnSave" app:layout_constraintTop_toTopOf="@+id/btnSave"
                    app:layout_constraintBottom_toBottomOf="@+id/btnSave"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    android:enabled="false"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:onClick="@{view -> articleCreationFragment.onSaveClick()}"
                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ttArticlePrice"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>